--- a/experimental/higepon/scheme-cont-jmp/Makefile.mona_gc.inc
+++ b/experimental/higepon/scheme-cont-jmp/Makefile.mona_gc.inc
@@ -1,3 +1,3 @@
-GC_CFLAGS  = -DMONASH_DONT_FREE_MEMORY -DUSE_MONA_GC -DGC_TRACE
+GC_CFLAGS  = -DMONASH_DONT_FREE_MEMORY -DUSE_MONA_GC #-DGC_TRACE
 GC_LDFLAGS = 
 GC_SOURCES = gc/GCNode.cpp gc/gc.cpp
