--- a/experimental/higepon/scheme-cont-jmp/gc/Makefile
+++ b/experimental/higepon/scheme-cont-jmp/gc/Makefile
@@ -9,8 +9,9 @@ GC_HEAP_TEST03   = ./gc_heap_test_03
 GC_HEAP_TEST04   = ./gc_heap_test_04
 GC_HEAP_TEST05   = ./gc_heap_test_05
 GC_REG_TEST01   = ./gc_reg_test_01
+GC_HEAVY_TEST01   = ./gc_heavy_test_01
 
-GC_TESTS = $(GC_STACK_TEST01) $(GC_STACK_TEST02) $(GC_STACK_TEST03) $(GC_GLOBAL_TEST01) $(GC_GLOBAL_TEST02) $(GC_HEAP_TEST01) $(GC_HEAP_TEST02) $(GC_HEAP_TEST03) $(GC_HEAP_TEST04) $(GC_HEAP_TEST05) $(GC_REG_TEST01)
+GC_TESTS = $(GC_STACK_TEST01) $(GC_STACK_TEST02) $(GC_STACK_TEST03) $(GC_GLOBAL_TEST01) $(GC_GLOBAL_TEST02) $(GC_HEAP_TEST01) $(GC_HEAP_TEST02) $(GC_HEAP_TEST03) $(GC_HEAP_TEST04) $(GC_HEAP_TEST05) $(GC_REG_TEST01) $(GC_HEAVY_TEST01)
 GC_STACK_TEST01_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST01).o
 GC_STACK_TEST02_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST02).o
 GC_STACK_TEST03_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST03).o
@@ -22,6 +23,7 @@ GC_HEAP_TEST03_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST03).o
 GC_HEAP_TEST04_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST04).o
 GC_HEAP_TEST05_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST05).o
 GC_REG_TEST01_OBJECTS   = $(GC_OBJECTS) $(GC_REG_TEST01).o
+GC_HEAVY_TEST01_OBJECTS = $(GC_OBJECTS) $(GC_HEAVY_TEST01).o
 
 CXXFLAGS = -pg -g -idirafter . -Wall $(GC_FLAGS) -DGC_TEST #-DGC_TRACE #-O3 # O2じゃないと gc 
 CFLAGS   = $(CXXFLAGS)
@@ -69,6 +71,9 @@ $(GC_HEAP_TEST05): $(GC_HEAP_TEST05_OBJECTS)
 
 $(GC_REG_TEST01): $(GC_REG_TEST01_OBJECTS)
 	$(CXX) -pg $(GC_REG_TEST01_OBJECTS) -o $@
+
+$(GC_HEAVY_TEST01): $(GC_HEAVY_TEST01_OBJECTS)
+	$(CXX) -pg $(GC_HEAVY_TEST01_OBJECTS) -o $@
 
 
 mysetjmp_asm.o: mysetjmp.asm
