--- a/experimental/higepon/scheme-cont-jmp/gc3/Makefile
+++ b/experimental/higepon/scheme-cont-jmp/gc3/Makefile
@@ -8,9 +8,10 @@ GC_HEAP_TEST02   = ./gc_heap_test_02
 GC_HEAP_TEST03   = ./gc_heap_test_03
 GC_HEAP_TEST04   = ./gc_heap_test_04
 GC_HEAP_TEST05   = ./gc_heap_test_05
+GC_HEAP_TEST06   = ./gc_heap_test_06
 GC_REG_TEST01   = ./gc_reg_test_01
 
-GC_TESTS = $(GC_STACK_TEST01) $(GC_STACK_TEST02) $(GC_STACK_TEST03) $(GC_GLOBAL_TEST01) $(GC_GLOBAL_TEST02) $(GC_HEAP_TEST01) $(GC_HEAP_TEST02) $(GC_HEAP_TEST03) $(GC_HEAP_TEST04) $(GC_HEAP_TEST05) $(GC_REG_TEST01)
+GC_TESTS = $(GC_STACK_TEST01) $(GC_STACK_TEST02) $(GC_STACK_TEST03) $(GC_GLOBAL_TEST01) $(GC_GLOBAL_TEST02) $(GC_HEAP_TEST01) $(GC_HEAP_TEST02) $(GC_HEAP_TEST03) $(GC_HEAP_TEST04) $(GC_HEAP_TEST05) $(GC_HEAP_TEST06) $(GC_REG_TEST01)
 GC_STACK_TEST01_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST01).o
 GC_STACK_TEST02_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST02).o
 GC_STACK_TEST03_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST03).o
@@ -21,9 +22,11 @@ GC_HEAP_TEST02_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST02).o
 GC_HEAP_TEST03_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST03).o
 GC_HEAP_TEST04_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST04).o
 GC_HEAP_TEST05_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST05).o
+GC_HEAP_TEST06_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST06).o
+
 GC_REG_TEST01_OBJECTS   = $(GC_OBJECTS) $(GC_REG_TEST01).o
 
-CXXFLAGS = -pg -g -idirafter . -Wall $(GC_FLAGS) -DGC_TEST #-DGC_TRACE #-O3 # O2じゃないと gc 
+CXXFLAGS = -pg -g -idirafter . -Wall $(GC_FLAGS) -DGC_TEST -DUSE_MONA_GC -DMONASH_DONT_FREE_MEMORY #-DGC_TRACE #-O3 # O2じゃないと gc 
 CFLAGS   = $(CXXFLAGS)
 
 GC_SOURCES = GCRecord.cpp gc.cpp
@@ -66,6 +69,9 @@ $(GC_HEAP_TEST04): $(GC_HEAP_TEST04_OBJECTS)
 
 $(GC_HEAP_TEST05): $(GC_HEAP_TEST05_OBJECTS)
 	$(CXX) -pg $(GC_HEAP_TEST05_OBJECTS) -o $@
+
+$(GC_HEAP_TEST06): $(GC_HEAP_TEST06_OBJECTS)
+	$(CXX) -pg $(GC_HEAP_TEST06_OBJECTS) -o $@
 
 $(GC_REG_TEST01): $(GC_REG_TEST01_OBJECTS)
 	$(CXX) -pg $(GC_REG_TEST01_OBJECTS) -o $@
