--- a/experimental/higepon/scheme-gc/gc3/Makefile
+++ b/experimental/higepon/scheme-gc/gc3/Makefile
@@ -26,7 +26,7 @@ GC_HEAP_TEST06_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST06).o
 
 GC_REG_TEST01_OBJECTS   = $(GC_OBJECTS) $(GC_REG_TEST01).o
 
-CXXFLAGS = -pg -g -idirafter . -Wall $(GC_FLAGS) -DGC_TEST -DUSE_MONA_GC -DMONASH_DONT_FREE_MEMORY #-O3 -DGC_TRACE #-O3 # O2じゃないと gc 
+CXXFLAGS = -pg -g -idirafter . -Wall $(GC_FLAGS) -DGC_TEST -DUSE_MONA_GC -DMONASH_DONT_FREE_MEMORY -DGC_TRACE #-O3 # O2じゃないと gc 
 CFLAGS   = $(CXXFLAGS)
 
 GC_SOURCES = GCRecord.cpp gc.cpp
