--- a/experimental/higepon/scheme-gc/Makefile
+++ b/experimental/higepon/scheme-gc/Makefile
@@ -3,7 +3,7 @@ TEST_TARGET   = ./scheme_test
 REGISTERS_INC = ./register.inc
 PROCEDURES_H  = ./primitive_procedures.h
 
-CXXFLAGS = -pg -g -idirafter . -Wall  $(GC_CFLAGS) -DMACRO_TRACE
+CXXFLAGS = -pg -g -idirafter . -Wall  $(GC_CFLAGS) #-DMACRO_TRACE
 CFLAGS   = $(CXXFLAGS)
 LDFLAGS  = $(GC_LDFLAGS)
 
