--- a/contrib/Multimedia/audio_server/client/Makefile
+++ b/contrib/Multimedia/audio_server/client/Makefile
@@ -16,6 +16,6 @@ include $(SHAREDIR)/configs/monapi-el5.inc
 endif
 
 CXXFLAGS += -DDEBUG
-INCLUDE += -I$(INCDIR)/stlport
+INCLUDE += -I$(INCDIR)/stlport -I$(INCDIR)/monalibc
 
 include dependencies
