--- a/experimental/higepon/scheme-gc/Makefile
+++ b/experimental/higepon/scheme-gc/Makefile
@@ -8,10 +8,10 @@ CFLAGS   = $(CXXFLAGS)
 LDFLAGS  = $(GC_LDFLAGS)
 
 #include Makefile.boehm_gc.inc
-#include Makefile.mona_gc.inc
+include Makefile.mona_gc.inc
 
 # たまに これで make checkする
-include Makefile.none_gc.inc
+#include Makefile.none_gc.inc
 
 SOURCES = $(PROCEDURE_SOURCES) \
 Application.cpp\
