--- a/experimental/higepon/scheme-gc/Makefile
+++ b/experimental/higepon/scheme-gc/Makefile
@@ -1,35 +1,16 @@
 TARGET        = ./scheme
 TEST_TARGET   = ./scheme_test
-REGISTERS_INC = ./register.inc
-PROCEDURES_H  = ./primitive_procedures.h
 
-CXXFLAGS = -pg -g -idirafter . -Wall -W $(GC_CFLAGS) #-DMACRO_TRACE
+CXXFLAGS = -pg -g -idirafter . -Wall $(GC_CFLAGS) #-DMACRO_TRACE
 CFLAGS   = $(CXXFLAGS)
 LDFLAGS  = $(GC_LDFLAGS)
+NFLAGS   = -felf
+include Makefile.src.inc
 
 #include Makefile.boehm_gc.inc
 #include Makefile.mona_gc.inc
-
 # たまに これで make checkする
 include Makefile.none_gc.inc
-
-include Makefile.src.inc
-
-PROCEDURE_SOURCES =\
-procedures/CharcterProcedures.cpp\
-procedures/EqualProcedures.cpp\
-procedures/False.cpp\
-procedures/IOProcedures.cpp\
-procedures/NumberProcedures.cpp\
-procedures/PairProcedures.cpp\
-procedures/Set.cpp\
-procedures/StringProcedures.cpp\
-procedures/SymbolProcedures.cpp\
-procedures/True.cpp\
-procedures/Undef.cpp\
-procedures/VectorProcedures.cpp\
-procedures/MiscProcedures.cpp
-
 
 TEST_SOURCES = \
 test_cpp/yaml.cpp\
@@ -39,21 +20,19 @@ test_cpp/QuoteFilterTest.cpp\
 test_cpp/ScannerTest.cpp\
 test_cpp/ExtRepParserTest.cpp
 
-
 OBJECTS = $(SOURCES:.cpp=.o)
 TEST_OBJECTS = $(TEST_SOURCES:.cpp=.o)
 
-include Makefile.libcont.inc
-
 GC_OBJECTS = $(GC_SOURCES:.cpp=.o)
 all : $(TARGET) $(TEST_TARGET)
+
+include Makefile.dep.inc
 
 $(TARGET):  $(REGISTERS_INC) $(PROCEDURES_H) main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS)
 	$(CXX) -pg -g main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS) -o $(TARGET) $(LDFLAGS)
 
 $(TEST_TARGET):  $(REGISTERS_INC) $(PROCEDURES_H) test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(TEST_OBJECTS) $(GC_OBJECTS)
 	$(CXX) -lcppunit -ldl -g test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(TEST_OBJECTS) -o $(TEST_TARGET) $(LDFLAGS)
-
 
 check : $(TEST_TARGET) $(TARGET)
 	$(TEST_TARGET)
@@ -62,8 +41,6 @@ check : $(TEST_TARGET) $(TARGET)
 gdb : $(TARGET)
 	gdb -x ./gdb.txt $(TARGET)
 
-main.o: main.cpp
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 test_cpp/main.o: test_cpp/main.cpp
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
@@ -74,12 +51,6 @@ test_cpp/main.o: test_cpp/main.cpp
 .SUFFIXES: .c .o
 .c.o:
 	$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $@
-
-$(REGISTERS_INC): $(PROCEDURE_SOURCES) ./test/generate.scm
-	gosh ./test/generate.scm --register $(PROCEDURE_SOURCES) > $@
-
-$(PROCEDURES_H): $(PROCEDURE_SOURCES) ./test/generate.scm
-	gosh ./test/generate.scm --header $(PROCEDURE_SOURCES) > $@
 
 depend:
 	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
