--- a/experimental/higepon/scheme-gc/Makefile.mona
+++ b/experimental/higepon/scheme-gc/Makefile.mona
@@ -3,7 +3,6 @@ include $(SRCTOP)/Makefile.inc
 
 TARGET  = SCHEME
 INSTDIR = $(BINDIR)/SERVERS
-include Makefile.src.inc
 
 ADDINCLUDE   = -I $(MONADIR)/include/monalibc -I .
 ADDLINK      =  main.o  $(LIBCONT_OBJECTS) -lmonalibc
@@ -12,5 +11,11 @@ ADDTARGETDEP = $(REGISTERS_INC) $(PROCEDURES_H)
 
 include $(SHAREDIR)/configs/monapi-ex5.inc
 include Makefile.dep.inc
+
+install: force
+	mkdir -p $(INSTDIR)
+	$(INSTALL) -p $(TARGET).EX5 $(INSTDIR)
+	$(INSTALL) -p lib/mona.scm lib/danny.scm $(INSTDIR)
+force: $(TARGET).EX5 ;
 
 -include dependencies
