--- a/experimental/higepon/scheme-gc/Makefile
+++ b/experimental/higepon/scheme-gc/Makefile
@@ -8,9 +8,9 @@ NFLAGS   = -felf
 include Makefile.src.inc
 
 #include Makefile.boehm_gc.inc
-#include Makefile.mona_gc.inc
+include Makefile.mona_gc.inc
 # たまに これで make checkする
-include Makefile.none_gc.inc
+#include Makefile.none_gc.inc
 
 TEST_SOURCES = \
 test_cpp/yaml.cpp\
