--- a/experimental/higepon/scheme-gc/Makefile.mona
+++ b/experimental/higepon/scheme-gc/Makefile.mona
@@ -4,13 +4,15 @@ include $(SRCTOP)/Makefile.inc
 TARGET  = SCHEME
 INSTDIR = $(BINDIR)/SERVERS
 include Makefile.src.inc
+#include Makefile.mona_gc.inc
 
-CLEANFILES   = $(LIBCONT_OBJECTS) $(REGISTERS_INC) $(PROCEDURES_H) main.o
+CLEANFILES   = $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(REGISTERS_INC) $(PROCEDURES_H) main.o
 ADDINCLUDE   = -I $(MONADIR)/include/monalibc -I .
-ADDLINK      =  main.o $(LIBCONT_OBJECTS) -lmonalibc
-ADDLINKDEP   =   $(LIBCONT_OBJECTS) $(MONADIR)/lib/libmonalibc.a main.o
+ADDLINK      =  main.o $(LIBCONT_OBJECTS)  $(GC_OBJECTS) -lmonalibc
+ADDLINKDEP   =   $(LIBCONT_OBJECTS)  $(GC_OBJECTS) $(MONADIR)/lib/libmonalibc.a main.o
 ADDTARGETDEP = $(REGISTERS_INC) $(PROCEDURES_H)
 
+GC_OBJECTS = $(GC_SOURCES:.cpp=.o)
 include $(SHAREDIR)/configs/monapi-ex5.inc
 include Makefile.dep.inc
 
