--- a/experimental/higepon/scheme-gc/Makefile.mona
+++ b/experimental/higepon/scheme-gc/Makefile.mona
@@ -10,8 +10,8 @@ TARGET_LIBS = lib/MONA.SCM lib/DANNY.SCM lib/TEST.SCM
 ADDCFLAGS    = $(GC_CFLAGS)
 CLEANFILES   = $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(REGISTERS_INC) $(PROCEDURES_H) main.o $(TARGET_LIBS)
 ADDINCLUDE   = -I $(MONADIR)/include/monalibc -I .
-ADDLINK      =  main.o $(LIBCONT_OBJECTS)  $(GC_OBJECTS) -lmonalibc
-ADDLINKDEP   =   $(LIBCONT_OBJECTS)  $(GC_OBJECTS) $(MONADIR)/lib/libmonalibc.a main.o
+ADDLINK      =  main.o $(LIBCONT_OBJECTS)  $(GC_OBJECTS) -lmonalibc-imp --enable-auto-import
+ADDLINKDEP   =   $(LIBCONT_OBJECTS)  $(GC_OBJECTS) $(MONADIR)/lib/libmonalibc-imp.a main.o
 ADDTARGETDEP =  $(REGISTERS_INC) $(PROCEDURES_H) $(TARGET_LIBS) 
 
 GC_OBJECTS = $(GC_SOURCES:.cpp=.o)
